--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,8 @@
     "jest": true,
     "describe": true,
     "it": true,
-    "expect": true
+    "expect": true,
+    "beforeEach": true,
+    "spyOn"
   }
 }
