--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "devDependencies": {
     "babel": "^5.5.6",
-    "babel-eslint": "^3.1.14",
+    "babel-eslint": "^3.1.15",
     "babel-jest": "^5.2.0",
     "eslint": "^0.22.1",
+    "jasmine": "^2.3.1",
+    "jasmine-spec-reporter": "^2.2.3",
     "jest-cli": "^0.4.10",
     "npm-check-updates": "^1.5.1"
   },
