--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "babel src/ --out-dir lib/",
+    "lint": "eslint src/ && eslint tests/",
     "update-dependencies": "npm-check-updates -u && rm -rf node_modules/ && npm install && npm test",
     "test": "babel-node scripts/test.js"
   },
