--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "update-dependencies": "npm-check-updates -u && rm -rf node_modules/ && npm install && npm test",
     "test": "babel-node scripts/test.js"
   },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/lukasbuenger/immutable-cursors.git"
+  },
   "homepage": "https://github.com/lukasbuenger/immutable-cursors",
   "bugs": {
     "url": "https://github.com/lukasbuenger/immutable-cursors/issues"
