--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "name": "Lukas Bünger",
     "url": "https://github.com/lukasbuenger"
   },
-  "license": "BSD-3-Clause and MIT",
+  "license": "LicenseRef-LICENSE",
   "devDependencies": {
     "babel": "^5.5.6",
     "babel-eslint": "^3.1.15",
