--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
     "eol-last": [0],
     "no-mixed-requires": [0],
     "no-underscore-dangle": [0],
-    "no-trailing-spaces": false
+    "no-trailing-spaces": [0]
   },
   "globals": {
     "jasmine": true,
