--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "name": "Lukas Bünger",
     "url": "https://github.com/lukasbuenger"
   },
-  "license": "LicenseRef-LICENSE",
+  "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
     "babel": "^5.5.8",
     "babel-eslint": "^3.1.15",
